[tool.poetry]
name = "qcut-init"
version = "0.1.0"
description = "ML Model for predicting gamma and beta parameters for a QAOA"
authors = ["Vivek Katial <vivekkatial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.11.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
